--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,19 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+bytemuck = { workspace = true }
+iced = { workspace = true }
+sipper = { workspace = true }
+iced_runtime = { workspace = true }
+tracing-subscriber = "0.3.19"
+
+[workspace]
+members = ["examples/*"]
+
+[workspace.dependencies]
+sleepy_hollow = { path = "." }
+
 bytemuck = "1.22.0"
-chrono = "0.4.39"
-cosmic-text = "0.13.2"
 iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", default-features = false, features = [
     "lazy",
     "advanced",
@@ -18,12 +28,4 @@ iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", default
     "svg",
 ] }
 iced_runtime = { git = "https://github.com/iced-rs/iced.git", branch = "master" }
-image = "0.25.5"
-palette = "0.7.6"
-png = "0.17.16"
-rand = "0.9.0"
-reqwest = "0.12.15"
 sipper = "0.1.0"
-tokio = "1.44.1"
-
-tracing-subscriber = "0.3.19"
